tests/typing/bad/testfile-subscript-1.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>
int main() { 1[2]; }
